--- a/HelmChart/plog_chart/Chart.yaml
+++ b/HelmChart/plog_chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: plog_chart
+name: plogchart
 description: plog_helm_chart for minikube cluster
 
 # A chart can be either an 'application' or a 'library' chart.
