--- a/HelmChart/plog_chart/values.yaml
+++ b/HelmChart/plog_chart/values.yaml
@@ -85,70 +85,114 @@ nodeSelector: {}
 tolerations: []
 affinity: {}
 
-# MongoDB 서비스에 대한 설정
-mongodb:
+# PostgreSQL 서비스에 대한 설정
+postgresql:
   image:
-    repository: mongo                       # MongoDB 이미지 저장소
-    tag: latest                            # MongoDB 이미지 태그
+    repository: postgres
+    tag: latest
   service:
-    port: 27017                            # MongoDB 서비스 포트
-  persistence: {{- include "common.persistence" . | nindent 4 }}  # 영속성 세부사항, 공통 영속성 세부사항 재사용
-  mongodbUsername: mongo                   # MongoDB 사용자명
-  mongodbPassword: 1234                    # MongoDB 비밀번호
-  mongodbDatabase: my_database             # MongoDB 데이터베이스 이름
-  securityContext: {{- include "common.securityContext" . | nindent 4 }}  # 보안 컨텍스트 세부사항, 공통 보안 컨텍스트 세부사항 재사용
-  networkPolicy: {{- include "common.networkPolicy" . | nindent 4 }}  # 네트워크 정책 세부사항, 공통 네트워크 정책 세부사항 재사용
+    port: 5432
+  persistence:
+    enabled: true
+    size: 1Gi
+  postgresqlUsername: postgres
+  postgresqlPassword: 1234
+  securityContext:
+    runAsUser: 999
+  networkPolicy:
+    enabled: true
   livenessProbe:
     exec:
       command:
       - sh
       - -c
-      - mongo --eval "db.adminCommand('ping')" # MongoDB에 특정된 liveness probe
+      - pg_isready -U postgres
   readinessProbe:
     exec:
       command:
       - sh
       - -c
-      - mongo --eval "db.adminCommand('ping')" # MongoDB에 특정된 readiness probe
+      - pg_isready -U postgres
+    initialDelaySeconds: 5
+    timeoutSeconds: 3
+
+
+## MongoDB 서비스에 대한 설정
+mongodb:
+  image:
+    repository: mongo
+    tag: latest
+  service:
+    port: 27017
+  persistence:
+    enabled: true
+    size: 1Gi
+  mongodbUsername: mongo
+  mongodbPassword: 1234
+  mongodbDatabase: my_database
+  securityContext:
+    runAsUser: 999
+  networkPolicy:
+    enabled: true
+  livenessProbe:
+    exec:
+      command:
+      - sh
+      - -c
+      - mongo --eval "db.adminCommand('ping')"
+  readinessProbe:
+    exec:
+      command:
+      - sh
+      - -c
+      - mongo --eval "db.adminCommand('ping')"
     initialDelaySeconds: 5
     timeoutSeconds: 3
 
 # Redis 서비스에 대한 설정
 redis:
   image:
-    repository: redis                       # Redis 이미지 저장소
-    tag: latest                            # Redis 이미지 태그
+    repository: redis
+    tag: latest
   service:
-    port: 6379                             # Redis 서비스 포트
-  persistence: {{- include "common.persistence" . | nindent 4 }}  # 영속성 세부사항, 공통 영속성 세부사항 재사용
-  redisPassword: 1234                      # Redis 비밀번호
-  securityContext: {{- include "common.securityContext" . | nindent 4 }}  # 보안 컨텍스트 세부사항, 공통 보안 컨텍스트 세부사항 재사용
-  networkPolicy: {{- include "common.networkPolicy" . | nindent 4 }}  # 네트워크 정책 세부사항, 공통 네트워크 정책 세부사항 재사용
+    port: 6379
+  persistence:
+    enabled: true
+    size: 1Gi
+  redisPassword: 1234
+  securityContext:
+    runAsUser: 999
+  networkPolicy:
+    enabled: true
   livenessProbe:
     exec:
       command:
       - sh
       - -c
-      - redis-cli ping                     # Redis에 특정된 liveness probe
+      - redis-cli ping
   readinessProbe:
     exec:
       command:
       - sh
       - -c
-      - redis-cli ping                     # Redis에 특정된 readiness probe
+      - redis-cli ping
     initialDelaySeconds: 5
     timeoutSeconds: 3
 
 # Vault 서비스에 대한 설정
 vault:
   image:
-    repository: vault                      # Vault 이미지 저장소
-    tag: latest                            # Vault 이미지 태그
+    repository: vault
+    tag: latest
   service:
-    port: 8200                             # Vault 서비스 포트
-  persistence: {{- include "common.persistence" . | nindent 4 }}  # 영속성 세부사항, 공통 영속성 세부사항 재사용
-  securityContext: {{- include "common.securityContext" . | nindent 4 }}  # 보안 컨텍스트 세부사항, 공통 보안 컨텍스트 세부사항 재사용
-  networkPolicy: {{- include "common.networkPolicy" . | nindent 4 }}  # 네트워크 정책 세부사항, 공통 네트워크 정책 세부사항 재사용
+    port: 8200
+  persistence:
+    enabled: true
+    size: 1Gi
+  securityContext:
+    runAsUser: 999
+  networkPolicy:
+    enabled: true
   injector:
     enabled: true
   livenessProbe:
@@ -156,12 +200,12 @@ vault:
       command:
       - sh
       - -c
-      - vault status -tls-skip-verify      # Vault에 특정된 liveness probe
+      - vault status -tls-skip-verify
   readinessProbe:
     exec:
       command:
       - sh
       - -c
-      - vault status -tls-skip-verify      # Vault에 특정된 readiness probe
+      - vault status -tls-skip-verify
     initialDelaySeconds: 5
     timeoutSeconds: 3
