helm chart nginx version latest로 수정

--- a/HelmChart/plog_chart/values.yaml
+++ b/HelmChart/plog_chart/values.yaml
@@ -5,7 +5,7 @@ image:
   repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 #private Docker registry에서 이미지를 가져오는데 사용할 secret의 목록.
 imagePullSecrets: []
