--- a/HelmChart/plog_chart/values.yaml
+++ b/HelmChart/plog_chart/values.yaml
@@ -45,13 +45,13 @@ service:
 
 #인그레스 리소스 설정.
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+  className: "nginx"
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: plog.ingress
       paths:
         - path: /
           pathType: ImplementationSpecific
