--- a/HelmChart/plog_chart/Chart.yaml
+++ b/HelmChart/plog_chart/Chart.yaml
@@ -22,3 +22,17 @@ version: 1.0.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
+
+dependencies:
+  - name: postgresql
+    version: 12.7.1
+    repository: https://charts.bitnami.com/bitnami
+  - name: mongodb
+    version: 13.16.0
+    repository: https://charts.bitnami.com/bitnami
+  - name: redis
+    version: 17.0.10
+    repository: https://charts.bitnami.com/bitnami
+  - name: vault
+    version: 0.25.0
+    repository: https://helm.releases.hashicorp.com
