--- a/plog-webapp/src/main/resources/application.yml
+++ b/plog-webapp/src/main/resources/application.yml
@@ -9,6 +9,13 @@ spring:
     redis:
       host: localhost
       port: 6379
+  datasource:
+    url: jdbc:postgresql://localhost:5432
+    username: postgres
+    password: 1234
+  flyway:
+    baseline-on-migrate: true
+    locations: classpath:db/migration
   cloud:
     vault:
       token:
