--- a/plog-webapp/src/main/resources/application.yml
+++ b/plog-webapp/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     password: 1234
   data:
     mongodb:
-      uri: mongodb://localhost:27017
+      uri: mongodb://localhost:27017/plog_files
     redis:
       host: localhost
       port: 6379
@@ -16,10 +16,7 @@ spring:
   flyway:
     baseline-on-migrate: true
     locations: classpath:db/migration
-  cloud:
-    vault:
-      token:
-      uri:
-      
-    .
-
+#  cloud:
+#    vault:
+#      token:
+#      uri:
