--- a/plog-webapp/src/main/resources/application.yml
+++ b/plog-webapp/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       host: ${MINIKUBE_IP}
       port: 6379
   datasource:
-    url: jdbc:${MINIKUBE_IP}://localhost:32017
+    url: jdbc:postgresql://${MINIKUBE_IP}:32017
     username: postgres
     password: 1234
   flyway:
